# django-async-benchmark

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.ai/rules/dev/: django-async.md
.kiro/: rules
DjangoAsyncProject/: asgi.py  settings.py  urls.py  wsgi.py
benchmarks/: admin.py  apps.py  middleware.py  models.py  urls.py  views_async.py  views_bridge.py  views_health.py  views_mock.py  views_results.py  views_sync.py
benchmarks/management/commands/: seed_data.py
benchmarks/migrations/: 0001_initial.py
benchmarks/services/: bridge_queries.py  cpu_tasks.py  db_queries.py  external.py  timing.py
k6/: benchmark.js
